<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_headers"
		android:layout_marginTop="10dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@drawable/shape_buttons"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country_code"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_listviews"
		android:layout_marginTop="10dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="10dip" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFFFF"
            android:background="@drawable/shape_sub_headers"
			android:layout_marginTop="5dip"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="5dip" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_item_listview"
            android:text="@string/airplanes"
            android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_marginTop="5dip"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="5dip"
	        android:paddingTop="15dip"
	        android:paddingBottom="15dip"
	        android:paddingLeft="20dip" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/shape_item_listview"
            android:paddingBottom="15dip"
            android:paddingTop="15dip"
			android:paddingLeft="20dip"
            android:text="@string/kg"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/shape_sub_headers"
            android:text="@string/products"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFFFF" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
	        android:dividerHeight="5dip"
	        android:divider="@android:color/transparent" >
        </ListView>

    </LinearLayout>

</LinearLayout>
